--- a/style/style.css
+++ b/style/style.css
@@ -10,7 +10,7 @@
 	line-height: normal;
 }
 
-/* style header */
+/* header */
 header {
 	width: 100%;
 	height: 48px;
@@ -32,4 +32,165 @@ header {
 	color: #F6BD41;
 	font-size: 18px;
 	font-weight: 700;
+}
+
+/* main */
+.mainContent {
+	width: 100%;
+	height: 100vh;
+	background-color: #121212;
+	}
+
+	/* title-btn-wrapper */
+.tytleBtnWrapper {
+	display: flex;
+	padding-top: 30px;
+	padding-left: 48px;
+	padding-right: 48px;
+}
+
+.tytlePlaylist {
+	color: #FFF;
+	font-size: 30px;
+	font-weight: 700;
+	flex-grow: 1;
+}
+
+.btnAddPlaylist {
+	max-width: 156px;
+	display: inline-flex;
+	padding: 7px 36px;
+	justify-content: center;
+	align-items: center;
+	gap: 10px;
+	border-radius: 4px;
+	background: #F6BD41;
+	border: none;
+	color: #121212;
+	font-size: 16px;
+	font-weight: 500;
+	line-height: 22px; /* 137.5% */
+	flex-grow: 1;
+}
+
+/* input */
+.searchWrapper {
+	display: flex;
+	padding-left: 48px;
+	padding-top: 30px;
+}
+
+.searchInput {
+	display: flex;
+	width: 662px;
+	padding: 6px 12px;
+	align-items: center;
+	gap: 9px;
+	border-radius: 2px;
+	border: 1px solid #3F3F3F;
+	background: #1D1D1D;
+	color: #F6BD41;
+}
+
+/* select-genre */
+.selectGenre {
+	width: 210px;
+	height: 36px;
+	fill: #1D1D1D;
+	stroke-width: 1px;
+	stroke: #3F3F3F;
+	background-color: #1D1D1D;
+	color: #FFF;
+	margin-left: 22px;
+}
+
+/* sort */
+.sortButtonsContainer {
+	color: #FFF;
+	font-family: Roboto, sans-serif;
+	font-size: 16px;
+	font-weight: 400;
+	margin-left: 24px;
+}
+
+.ascSortButton {
+	color: #F6BD41;
+	font-family: Roboto, sans-serif;
+	font-size: 16px;
+	font-weight: 400;
+	border: none; 
+	outline: none;
+	background-color: #121212;
+}
+
+/* section */
+
+/* section-rock */
+.playlistsWrapper {
+	display: flex;
+	padding-left: 48px;
+	padding-top: 24px;
+}
+
+.sectionRock {
+	display: flex;
+	width: 570px;
+	height: 540px;
+	border-radius: 4px;
+	background: #1C1C1C;
+}
+
+/* img */
+.imgRock {
+	width: 170px;
+	height: 176px;
+	border-radius: 4px;
+	background: lightgray 50% / cover no-repeat;
+	margin-left: 36px;
+	margin-top: 24px;
+}
+
+/* info panel */
+.infoPlayListWrapper {
+	display: flex;
+	flex-direction: column;
+	margin-top: 31px;
+	margin-left: 24px;
+}
+
+.spanList {
+	width: 45px;
+	height: 24px;
+	color: #FFF;
+	font-size: 14px;
+	font-weight: 500;
+	line-height: 24px; /* 171.429% */
+}
+
+.namePlayList {
+	width: 200px;
+	height: 36px;
+	color: #FFF;
+	font-size: 30px;
+	font-weight: 700;
+	margin-top: 23px;
+}
+
+.quantityDurationTrack {
+	width: 200px;
+	color: #8A8A8A;
+	font-size: 14px;
+	font-weight: 400;
+	line-height: 24px; /* 171.429% */
+	margin-top: 10px;
+}
+
+.quantityArtists {
+	width: 304px;
+	height: 24px;
+	color: #FFF;
+	font-size: 16px;
+	font-weight: 400;
+	line-height: 24px; /* 150% */
+	margin-top: 11px;
 }
