--- a/style/style.css
+++ b/style/style.css
@@ -10,6 +10,15 @@
 	line-height: normal;
 }
 
+
+body {
+	background-color: #F6BD41;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	padding-top: 20vh;
+}
+
 /* header */
 header {
 	width: 100%;
@@ -36,8 +45,8 @@ header {
 
 /* main */
 .mainContent {
-	width: 100%;
-	height: 100vh;
+	width: 1280px;
+	height: 781px;
 	background-color: #121212;
 	}
 
@@ -138,6 +147,7 @@ header {
 	height: 540px;
 	border-radius: 4px;
 	background: #1C1C1C;
+	flex-wrap: wrap;
 }
 
 /* img */
@@ -149,7 +159,6 @@ header {
 	margin-left: 36px;
 	margin-top: 24px;
 }
-
 /* info panel */
 .infoPlayListWrapper {
 	display: flex;
@@ -157,7 +166,7 @@ header {
 	margin-top: 31px;
 	margin-left: 24px;
 }
-
+/* info panale rock */
 .spanList {
 	width: 45px;
 	height: 24px;
@@ -166,7 +175,7 @@ header {
 	font-weight: 500;
 	line-height: 24px; /* 171.429% */
 }
-
+/* info panale rock */
 .namePlayList {
 	width: 200px;
 	height: 36px;
@@ -175,7 +184,7 @@ header {
 	font-weight: 700;
 	margin-top: 23px;
 }
-
+/* time track */
 .quantityDurationTrack {
 	width: 200px;
 	color: #8A8A8A;
@@ -184,7 +193,7 @@ header {
 	line-height: 24px; /* 171.429% */
 	margin-top: 10px;
 }
-
+/* artist */
 .quantityArtists {
 	width: 304px;
 	height: 24px;
@@ -194,3 +203,21 @@ header {
 	line-height: 24px; /* 150% */
 	margin-top: 11px;
 }
+/* song */
+.songContainer {
+	display: flex;
+	flex-direction: column;
+}
+
+.audioElement {
+	max-height: 24px;
+	filter: invert(100%);
+	border-radius: 4px;
+	max-width: 100%;
+}
+
+.audioElement::-webkit-media-controls-enclosure {
+	border-radius: 4px;
+	color: #fff;
+}
+
